--- a/about.html
+++ b/about.html
@@ -48,58 +48,31 @@
         </div>
       </div>
     </nav>
-    <header class="featured-index">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-7 index-image">
-            <img src="assets/images/index-photo.jpg">
-            <div class="index-image-description">
-              <div>18 November 2016</div>
-              <h2>Masterclass Series</h2>
-              <p>Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai</p>
-            </div>
-          </div>
-          <div class="col-md-5">
-            <div class="index-text">
-              <h1>Perhimpunan Indonesia <strong>NUS</strong></h1>
-              <p>Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai</p>
-              <a class="btn btn-join">Join Us</a>
-            </div>
-          </div>
-        </div>
-      </div>
+    <header class="about-pinus-top">
+      <div class="about-pinus-text"><h1>ABOUT</h1><h1>PINUS</h1></div>
+      <p>PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon.</p>
+      <p>PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon.</p>
+      <p>PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon.</p>
     </header>
-    <main class="index-main container-fluid">
-    <div class="row">
-      <aside class="index-aside col-md-3">
-        <h2>What's Happening?</h2>
-        <div class="right-heading-border"></div>
-      </aside>
-      <section class="col-md-9">
-        <article class="container-fluid index-article">
-          <div class="col-md-3">
-            <img class="img-responsive" src="assets/images/index-event.jpg"></img>
-          </div>
-          <div class="col-md-9 index-article">
-            <div>9 January 2017</div>
-            <h2>SAN 2017 IS RECRUITING!</h2>
-            <p>Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai</p>
-            <a class="btn btn-article-join">Join Us</a>
-          </div>
-        </article>
-        <article class="container-fluid index-article">
-          <div class="col-md-3">
-            <img class="img-responsive" src="assets/images/index-event.jpg"></img>
-          </div>
-          <div class="col-md-9 index-article">
-            <div>9 January 2017</div>
-            <h2>SAN 2017 IS RECRUITING!</h2>
-            <p>Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai Prata capcai</p>
-            <a class="btn btn-article-join">Join Us</a>
-          </div>
-        </article>
-      </section>
-    </div>
+    <main class="about-main">
+      <div class="vision">
+        <h2>VISION</h2>
+        <div class="heading-border"></div>
+        <ol>
+          <li>Halo</li>
+          <li>Halo</li>
+          <li>Halo</li>
+        </ol>
+      </div>
+      <div class="mission">
+        <h2>MISSION</h2>
+        <div class="heading-border"></div>
+        <ul>
+          <li>Halo</li>
+          <li>Halo</li>
+          <li>Halo</li>
+        </ul>
+      </div>
     </main>
     <footer>
       <div class="footer-images">
