--- a/shop.html
+++ b/shop.html
@@ -48,30 +48,54 @@
         </div>
       </div>
     </nav>
-    <header class="about-pinus-top">
-      <div class="about-pinus-text"><h1>ABOUT</h1><h1>PINUS</h1></div>
-      <p>PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon.</p>
-      <p>PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon.</p>
-      <p>PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon. PINUS adalah seekor pohon.</p>
+    <header class="pinus-header">
+      <h1>PINUS SHOP</h1>
+      <div class="heading-border">
     </header>
-    <main class="about-main">
-      <div class="vision">
-        <h2>VISION</h2>
-        <div class="right-heading-border"></div>
-        <ol>
-          <li>Halo</li>
-          <li>Halo</li>
-          <li>Halo</li>
-        </ol>
+    <main class="with-bg market-main">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="shop-item">
+              <img src="assets/images/photo.png">
+              <h3 class="shop-item-title">PINUS Welfare Pack</h3>
+              <h4 class="shop-item-price">SGD 3.00/pax</h4>
+              <div class="shop-item-description">Enak banget loh!</div>
+              <a class="btn-purchase btn">PURCHASE</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="shop-item active">
+              <img src="assets/images/photo.png">
+              <h3 class="shop-item-title">PINUS Welfare Pack</h3>
+              <h4 class="shop-item-price">SGD 3.00/pax</h4>
+              <div class="shop-item-description">Enak banget loh!</div>
+              <a class="btn-purchase btn">PURCHASE</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="mission">
-        <h2>MISSION</h2>
-        <div class="right-heading-border"></div>
-        <ul>
-          <li>Halo</li>
-          <li>Halo</li>
-          <li>Halo</li>
-        </ul>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="shop-item">
+              <img src="assets/images/photo.png">
+              <h3 class="shop-item-title">PINUS Welfare Pack</h3>
+              <h4 class="shop-item-price">SGD 3.00/pax</h4>
+              <div class="shop-item-description">Enak banget loh!</div>
+              <a class="btn-purchase btn">PURCHASE</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="shop-item">
+              <img src="assets/images/photo.png">
+              <h3 class="shop-item-title">PINUS Welfare Pack</h3>
+              <h4 class="shop-item-price">SGD 3.00/pax</h4>
+              <div class="shop-item-description">Enak banget loh!</div>
+              <a class="btn-purchase btn">PURCHASE</a>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
