--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img alt="Logo PINUS" src="assets/images/logo.png" height="25"></a>
+          <a class="navbar-brand" href="index.html"><img alt="Logo PINUS" src="assets/images/logo.png" height="25"></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,10 +40,10 @@
                 <li><a href="#">Something else here</a></li>
               </ul>
             </li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">Library</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#" class="sign-up">Sign Up</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="library.html">Library</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="signup.html" class="sign-up">Sign Up</a></li>
           </ul>
         </div>
       </div>
@@ -69,7 +69,7 @@
         </div>
       </div>
     </header>
-    <main class="index-main container-fluid">
+    <main class="index-main with-bg container-fluid">
     <div class="row">
       <aside class="index-aside col-md-3">
         <h2>What's Happening?</h2>
