--- a/library.html
+++ b/library.html
@@ -49,28 +49,28 @@
       </div>
     </nav>
     <header class="pinus-header">
-      <h1>PINUS SHOP</h1>
+      <h1>PINUS LIBRARY</h1>
       <div class="heading-border"></div>
     </header>
     <main class="with-bg market-main">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
-          <div class="shop-item">
+          <div class="market-item">
             <img src="assets/images/photo.png">
-            <h3 class="shop-item-title">PINUS Welfare Pack</h3>
-            <h4 class="shop-item-price">SGD 3.00/pax</h4>
-            <div class="shop-item-description">Enak banget loh!</div>
-            <a class="btn-market btn">PURCHASE</a>
+            <h3 class="library-item-title">Organic Chemistry by Nades</h3>
+            <h3 class="library-item-availability">AVAILABLE</h3>
+            <div class="library-item-description">Owner: Steven Salomo Sitorus</div>
+            <a class="btn-market btn">CONTACT</a>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="shop-item active">
+          <div class="market-item borrowed">
             <img src="assets/images/photo.png">
-            <h3 class="shop-item-title">PINUS Welfare Pack</h3>
-            <h4 class="shop-item-price">SGD 3.00/pax</h4>
-            <div class="shop-item-description">Enak banget loh!</div>
-            <a class="btn-market btn">PURCHASE</a>
+            <h3 class="library-item-title">Organic Chemistry by Nades</h3>
+            <h3 class="library-item-availability">BORROWED</h3>
+            <div class="library-item-description">Owner: Steven Salomo Sitorus</div>
+            <a class="btn-market btn">CONTACT</a>
           </div>
         </div>
       </div>
@@ -78,26 +78,27 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6">
-          <div class="shop-item">
+          <div class="market-item">
             <img src="assets/images/photo.png">
-            <h3 class="shop-item-title">PINUS Welfare Pack</h3>
-            <h4 class="shop-item-price">SGD 3.00/pax</h4>
-            <div class="shop-item-description">Enak banget loh!</div>
-            <a class="btn-market btn">PURCHASE</a>
+            <h3 class="library-item-title">Organic Chemistry by Nades</h3>
+            <h3 class="library-item-availability">AVAILABLE</h3>
+            <div class="library-item-description">Owner: Steven Salomo Sitorus</div>
+            <a class="btn-market btn">CONTACT</a>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="shop-item">
+          <div class="market-item">
             <img src="assets/images/photo.png">
-            <h3 class="shop-item-title">PINUS Welfare Pack</h3>
-            <h4 class="shop-item-price">SGD 3.00/pax</h4>
-            <div class="shop-item-description">Enak banget loh!</div>
-            <a class="btn-market btn">PURCHASE</a>
+            <h3 class="library-item-title">Organic Chemistry by Nades</h3>
+            <h3 class="library-item-availability">AVAILABLE</h3>
+            <div class="library-item-description">Owner: Steven Salomo Sitorus</div>
+            <a class="btn-market btn">CONTACT</a>
           </div>
         </div>
       </div>
     </div>
     </main>
+    <a class="btn add-book">+ ADD YOUR BOOKS</a>
     <footer>
       <div class="footer-images">
         <img src="assets/images/iconfb.png">
